--- a/index2.html
+++ b/index2.html
@@ -10,47 +10,46 @@
 
 <body>
 
-
-    <div id="cabeçalho">
+    <header>
         <h1>Meu Site Semântico</h1>
-        <div id="navegacao">
-
+        <nav>
             <ul>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
 
 
-    <div id="principal">
-        <div id="sobre">
+    <main>
+        <section id="sobre">
             <h2>Sobre Nós</h2>
             <p>Esta seção contém informações sobre nossa empresa.</p>
-        </div>
+        </section>
 
-        <div id="servicos">
+
+        <section id="servicos">
             <h2>Serviços</h2>
-            <div class="artigo">
+            <article>
                 <h3>Desenvolvimento Web</h3>
                 <p>Oferecemos soluções completas para desenvolvimento de sites.</p>
-            </div>
-            <div class="artigo">
+            </article>
+            <article>
                 <h3>Design UX/UI</h3>
                 <p>Projetamos experiências incríveis para seus usuários.</p>
-            </div>
-        </div>
-        <div id="aparte">
+                </artclie>
+        </section>
+        <aside>
             <h3>Curiosidade</h3>
             <p>Sabia que o HTML semântico melhora a acessibilidade do site?</p>
-        </div>
-    </div>
-
+        </aside>
+    </main>
     <!-- Rodapé da página -->
-    <div id="rodape">
+    <footer>
         <p>&copy; 2025 Meu Site. Todos os direitos reservados.</p>
-    </div>
+    </footer>
+
 
 </body>
 
