--- a/calendario.html
+++ b/calendario.html
@@ -18,7 +18,7 @@
         <button data-dia="sexta">Sexta</button>
         <button data-dia="fim-de-semana">Fim de semana</button>
     </div>
-    <div         ></div>
+    <div id="mensagem"></div>
     <script src="./script.js"></script>
 </body>
 
